# rocon_concert

./: README.mediawiki  rocon.rosinstall  rocon_turtlebot.rosinstall  rosdep.yaml  stack.xml
concert_conductor/: .project  .pydevproject  CHANGELOG.rst  CMakeLists.txt  Makefile  manifest.xml  package.xml  rosdoc.yaml  setup.py
concert_conductor/cfg/: params.cfg
concert_conductor/doc/: Makefile  conf.py  index.rst  introspection.rst  manifest.yaml  modules.rst  specifications.rst  state_machine.rst
concert_conductor/launch/: conductor.launch  pirate.launch
concert_conductor/scripts/: concert_conductor_graph  conductor.py
concert_conductor/src/concert_conductor/: __init__.py  client_info.py  concert_client.py  concert_clients.py  conductor.py  exceptions.py  graveyard_client.py  local_gateway.py  notifications.py  rapp_handler.py  ros_parameters.py  transitions.py
concert_master/: .project  .pydevproject  CHANGELOG.rst  CMakeLists.txt  Makefile  manifest.xml  package.xml  setup.py
concert_master/doc/: Makefile  conf.py  index.rst  launcher.rst  make.bat  manifest.yaml  quickstart.rst  service.rst  solution.rst
concert_master/launch/: concert_master.launch  legacy_master.launch  master.launch  pirate_master.launch
concert_master/resources/launch/: concert_master.launch
concert_master/resources/yaml/: concert_master.yaml
concert_master/scripts/: concert_info  concert_master.py  concerto.py  master.py
concert_master/src/: master.py
concert_master/src/concert_master/: __init__.py  master.py  (+1 more)
concert_orchestra/: .cproject  .gitignore  .project  .pydevproject  CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
concert_orchestra/scripts/: impl_to_dot  orchestra.py
concert_orchestra/test/: setup.cfg  test_compatibles.py
concert_roles/: .project  .pydevproject  CMakeLists.txt  Readme.md  package.xml  setup.py
concert_roles/launch/: conductor.launch  remocon_tester.launch  role_manager.launch  standalone.launch
concert_roles/scripts/: attach_test_remocon  concert_roles_and_apps  load_roles_and_apps  load_test_roles_and_apps  role_manager.py
concert_roles/yaml/: test_roles_and_apps.interactions
concert_scheduler/: .project  .pydevproject  CMakeLists.txt  package.xml  setup.py
concert_scheduler/scripts/: compatibility_tree_scheduler.py  demo_scheduler.py  scheduler  scheduler.py
concert_schedulers/: .project  .pydevproject  CHANGELOG.rst  CMakeLists.txt  Readme.md  package.xml  setup.py
concert_schedulers/doc/: conf.py  index.rst  manifest.yaml  modules.rst  requesters.rst  schedulers.rst
concert_schedulers/launch/: compatibility_tree_scheduler.launch  preemptive_compatibility_tree_scheduler.launch  simple_scheduler.launch
concert_schedulers/scripts/: compatibility_tree_scheduler.py  concert_scheduler_requests  demo_scheduler.py  rocon_scheduler_requests
concert_schedulers/tests/: CMakeLists.txt
concert_service/: .project  .pydevproject  CMakeLists.txt  package.xml  setup.py
concert_service/launchers/: chatter.launch
concert_service/scripts/: static_link_graph_service.py
concert_service/services/: annotateamap.service  chatter.service  chatter2.service  makeamap.service  teleop.service  turtle.service  turtle2.service
concert_service_handlers/: CMakeLists.txt  package.xml  setup.py
concert_service_handlers/launchers/: chatter.launch  turtle.launch
concert_service_handlers/scripts/: dummy.py  static_link_graph_service.py
concert_service_link_graph/: .project  .pydevproject  CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
concert_service_link_graph/scripts/: static_link_graph_service.py
concert_service_manager/: .project  .pydevproject  CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
concert_service_manager/concert/: happy.concert
concert_service_manager/doc/: Makefile  conf.py  index.rst  make.bat  overview.rst  service_manager_apis.rst
concert_service_manager/launch/: service_manager.launch
concert_service_manager/scripts/: add_service_from_file.py  service_manager
concert_service_manager/tests/: CMakeLists.txt
concert_service_roslaunch/: .project  .pydevproject  CMakeLists.txt  package.xml  setup.py
concert_service_roslaunch/launch/: chatter.launch  turtle.launch
concert_service_roslaunch/launchers/: chatter.launch
concert_service_roslaunch/scripts/: static_link_graph_service  static_link_graph_service.py
concert_service_utilities/: .project  .pydevproject  CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
concert_service_utilities/doc/: Makefile  conf.py  index.rst  make.bat  resource_pimp_api.rst  scheduler_api.rst
concert_service_utilities/launch/: concert_service_info.launch
concert_service_utilities/scripts/: concert_service_info
concert_service_utilities/test/: concert_info.rostest  test_concert_info.py
concert_servicemanager/: CMakeLists.txt  package.xml  setup.py
concert_servicemanager/launch/: servicemanager.launch
concert_servicemanager/scripts/: add_service_from_file.py  concert_servicemanager
concert_servicemanager/services/: admin.service  chatter.service  turtle.service
concert_services/: .project  CHANGELOG.rst  CMakeLists.txt  package.xml
concert_services/admin/: admin.interactions  admin.service
concert_services/turtlesim/: turtlesim.launch  turtlesim.link_graph  turtlesim.service
concert_software_farmer/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
concert_software_farmer/doc/: Makefile  client.rst  conf.py  exceptions.rst  farmer.rst  index.rst  make.bat  rosapi.rst  specification.rst
concert_software_farmer/launch/: software_farmer.launch
concert_software_farmer/scripts/: software_farmer.py
concert_solution/: .project  .pydevproject  CMakeLists.txt  package.xml
concert_solution/concert/: solution.concert
concert_solution/launch/: concert.launch  dude.launch
concert_utilities/: .project  .pydevproject  CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
concert_utilities/scripts/: conductor_graph_to_string.py  generate_conductor_state_graph.py
rocon_concert/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
(+236 files in other folders)
