<package>
  <name>concert_conductor</name>
  <version>0.1.0</version>
  <description>
    Managing the concert clients - invitations, monitoring connections...
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonl@rnd.yujinrobot.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/concert_conductor</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_orchestration</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_orchestration/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="jihoonl@rnd.yujinrobot.com">Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>appmanager_msgs</run_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gateway_msgs</run_depend>
  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
