<package>
  <name>concert_master</name>
  <version>0.5.5</version>
  <description>
    General concert functionality.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/concert_conductor</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_concert</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_concert/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rocon_utilities</run_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>python-qt-bindings</run_depend>
  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
