<package>
  <name>concert_master</name>
  <version>0.6.11</version>
  <description>
    General concert functionality.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/concert_master</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_concert</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_concert/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-catkin-pkg</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>rocon_python_utils</run_depend>
  <run_depend>rocon_std_msgs</run_depend>

  <run_depend>rocon_gateway</run_depend>
  <run_depend>rocon_hub</run_depend>
  <run_depend>rocon_python_comms</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rocon_icons</run_depend>
  <run_depend>rocon_master_info</run_depend>
  <run_depend>concert_service_manager</run_depend>
  <run_depend>concert_software_farmer</run_depend>
  <run_depend>concert_conductor</run_depend>
  <run_depend>rocon_interactions</run_depend>
  <run_depend>concert_schedulers</run_depend>

  <!-- To handle web components -->
  <run_depend>rosbridge_server</run_depend>
  <!-- 
    Hardcode this dependency for now since we only test it on linux 
    Ideally, I wouldn't hardcode the zeroconf implementation though.
    even if it does appeal to us ubuntu eggheads.
  -->
  <run_depend>zeroconf_avahi</run_depend>
</package>
