<package>
  <name>concert_orchestra</name>
  <version>0.5.2</version>
  <description>
    Orchestrating the concert - linking, connections, remappings, resource handling.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/concert_orchestra</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_concert</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_concert/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="jihoonlee.in@gmail.com">Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roslib</run_depend>
  <run_depend>rocon_utilities</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>python-pydot</run_depend>
  <run_depend>graphviz</run_depend>
  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
