<?xml version="1.0"?>
<package>
  <name>concert_scheduler</name>
  <version>0.0.0</version>
  <description>The concert_scheduler package</description>

  <maintainer email="jihoonl@todo.todo">jihoonl</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/concert_scheduler</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>scheduler_msgs</run_depend>
  <run_depend>unique_id</run_depend>

</package>
