<?xml version="1.0"?>
<package>
  <name>concert_schedulers</name>
  <version>0.5.0</version>
  <description>Various schedulers for the concert</description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <url type="website">http://ros.org/wiki/concert_schedulers</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_concert</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_concert/issues</url>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rocon_utilities</run_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>scheduler_msgs</run_depend>
  <run_depend>unique_id</run_depend>

</package>
