<?xml version="1.0"?>
<package>
  <name>concert_schedulers</name>
  <version>0.6.11</version>
  <description>Various schedulers for the concert</description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>

  <url type="website">http://ros.org/wiki/concert_schedulers</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_concert</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_concert/issues</url>
  <author>Daniel Stonier</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_msgs</run_depend>
  <run_depend>rocon_app_manager_msgs</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>concert_scheduler_requests</run_depend>
  <run_depend>rocon_uri</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rocon_python_utils</run_depend>
  <run_depend>scheduler_msgs</run_depend>
  <run_depend>unique_id</run_depend>
  <run_depend>uuid_msgs</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>    
  </export>

</package>
