<?xml version="1.0"?>
<package>
  <name>concert_service_handlers</name>
  <version>0.5.5</version>
  <description>The concert_service_handlers package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/concert_service</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>unique_id</run_depend>
  <run_depend>uuid_msgs</run_depend>
  <run_depend>scheduler_msgs</run_depend>

</package>
