<?xml version="1.0"?>
<package>
  <name>concert_service_manager</name>
  <version>0.6.11</version>
  <description>Component responsible for launching and managing concert services.</description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/concert_service_manager</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_concert</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_concert/issues</url>
  <author>Daniel Stonier</author>
  <author>Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-catkin-pkg</build_depend>

  <run_depend>concert_msgs</run_depend>
  <run_depend>genpy</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rocon_interactions</run_depend>
  <run_depend>rocon_python_utils</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>unique_id</run_depend>
  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
