<package>
  <name>concert_service_utilities</name>
  <version>0.6.11</version>
  <description>
    Utilities for services.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/concert_service_utilities</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_concert</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_concert/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>rostest</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosunit</run_depend>
  <run_depend>rocon_icons</run_depend>
  <run_depend>rocon_python_comms</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
