<?xml version="1.0"?>
<package>
  <name>concert_servicemanager</name>
  <version>0.5.5</version>
  <description>The concert_servicemanager package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/concert_servicemanager</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>concert_msgs</run_depend>

</package>
