<package>
  <name>concert_services</name>
  <version>0.5.5</version>
  <description>
    Officially supported concert services.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/concert_services</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_concert</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_concert/issues</url>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <run_depend>rospy</run_depend> -->

  <export>
    <rocon_service>admin/admin.service</rocon_service>
  </export>
</package>
