<?xml version="1.0"?>
<package>
  <name>concert_software_farmer</name>
  <version>0.6.11</version>
  <description>
    Concert Software farm is to manage software being utilised across services 
  </description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <author>Jihoon Lee</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/concert_software_farmer</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_concert</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_concert/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>genpy</run_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rocon_std_msgs</run_depend>
  <run_depend>rocon_python_comms</run_depend>
  <run_depend>rocon_python_utils</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
