<?xml version="1.0"?>
<package>
  <name>concert_solution</name>
  <version>0.0.0</version>
  <description>The concert_solution package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/concert_solution</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>concert_servicemanager</run_depend>

  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
