<package>
  <name>concert_utilities</name>
  <version>0.6.11</version>
  <description>
    Utilities, libraries and modules for general concert support.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/concert_utilities</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_concert</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_concert/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>concert_conductor</run_depend>
  <run_depend>gateway_msgs</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rocon_gateway_utils</run_depend>
  <run_depend>rocon_python_comms</run_depend>
</package>
