<?xml version="1.0"?>
<package>
  <name>rocon_concert</name>
  <version>0.1.0</version>
  <description>
    Includes tools for handling solutions, linking and app distribution.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/rocon_concert</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_concert</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_concert/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="jihoonlee.in@gmail.com">Jihoon Lee</author>

  <run_depend>concert_conductor</run_depend>
  <run_depend>concert_master</run_depend>
  <run_depend>rocon_orchestra</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>

